[gd_scene load_steps=17 format=3 uid="uid://dciqrbh6xim8c"]

[ext_resource type="Texture2D" uid="uid://cjmdv8h8yftk0" path="res://Sprites PI/Slime2.png" id="1_cnq3q"]
[ext_resource type="Script" path="res://Enemigos/slime.gd" id="1_g6yyf"]
[ext_resource type="AudioStream" uid="uid://bwjuk3pfgt3v7" path="res://Efectos_Sonidos/Slimedead.ogg" id="3_csjy5"]

[sub_resource type="AtlasTexture" id="AtlasTexture_0b26j"]
atlas = ExtResource("1_cnq3q")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_36kea"]
atlas = ExtResource("1_cnq3q")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_hl4d8"]
atlas = ExtResource("1_cnq3q")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_eqn17"]
atlas = ExtResource("1_cnq3q")
region = Rect2(0, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_2kdii"]
atlas = ExtResource("1_cnq3q")
region = Rect2(128, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_l03nj"]
atlas = ExtResource("1_cnq3q")
region = Rect2(0, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_tvltv"]
atlas = ExtResource("1_cnq3q")
region = Rect2(64, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_vx0rl"]
atlas = ExtResource("1_cnq3q")
region = Rect2(128, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_j2lla"]
atlas = ExtResource("1_cnq3q")
region = Rect2(0, 192, 64, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_uqxav"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_0b26j")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_36kea")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hl4d8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_eqn17")
}],
"loop": true,
"name": &"Mov",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_2kdii")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_l03nj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tvltv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vx0rl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_j2lla")
}],
"loop": false,
"name": &"die-slime",
"speed": 8.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_p4itk"]
radius = 11.5
height = 41.4

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_w3670"]
radius = 11.8
height = 40.4

[sub_resource type="RectangleShape2D" id="RectangleShape2D_3osxe"]
size = Vector2(13.4, 14.9)

[node name="Slime" type="CharacterBody2D"]
scale = Vector2(5, 5)
collision_layer = 2
script = ExtResource("1_g6yyf")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_uqxav")
animation = &"Mov"
autoplay = "Mov"
frame_progress = 0.755878
flip_h = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="." groups=["zonaEnemigo"]]
position = Vector2(-1.3, -0.3)
rotation = -1.5708
shape = SubResource("CapsuleShape2D_p4itk")

[node name="raycas_floor_detection" type="RayCast2D" parent="."]
position = Vector2(20, 3.5)
target_position = Vector2(0, 10.5)

[node name="raycas_wall_detection" type="RayCast2D" parent="."]
position = Vector2(0, 10)
target_position = Vector2(26.6, -0.2)

[node name="damage_zone" type="Area2D" parent="."]
position = Vector2(-5, 0)
collision_layer = 2
collision_mask = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="damage_zone"]
modulate = Color(1, 0, 0, 1)
position = Vector2(1.6, 0)
rotation = 1.5708
shape = SubResource("CapsuleShape2D_w3670")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="damage_zone"]
modulate = Color(1, 0, 0, 1)
position = Vector2(4.6, 0.600001)
rotation = 1.5708
shape = SubResource("RectangleShape2D_3osxe")

[node name="audio_die" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_csjy5")
volume_db = 24.0

[connection signal="animation_finished" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_animation_finished"]
[connection signal="area_entered" from="damage_zone" to="." method="_on_damage_zone_area_entered"]
